--- a/plannit/package.json
+++ b/plannit/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-native-fontawesome": "^0.1.0",
+    "axios": "^0.19.0",
     "expo": "^35.0.0",
     "formik": "1.4.0",
     "react": "16.8.3",
