--- a/plannit/package.json
+++ b/plannit/package.json
@@ -13,10 +13,13 @@
     "@fortawesome/react-native-fontawesome": "^0.1.0",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
+    "expo-calendar": "~7.0.0",
     "formik": "1.4.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-add-calendar-event": "^3.0.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
@@ -25,8 +28,7 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
-    "react-navigation-tabs": "^2.5.6",
-    "react-native-datepicker": "^1.7.2"
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
