--- a/plannit/package.json
+++ b/plannit/package.json
@@ -17,16 +17,17 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
-    "react-navigation-tabs": "^2.5.6",
-    "react-native-datepicker": "^1.7.2"
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
