--- a/plannit/package.json
+++ b/plannit/package.json
@@ -21,6 +21,7 @@
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-google-maps-directions": "^2.1.1",
+    "react-native-picker-select": "^6.3.3",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-vector-icons": "^6.6.0",
