--- a/plannit/package.json
+++ b/plannit/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/react-native-fontawesome": "^0.1.0",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
-    "expo-calendar": "~7.0.0",
+    "expo-calendar": "^7.0.0",
     "formik": "1.4.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
